--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -115,6 +115,14 @@ button:hover {
     width: 220px; 
     height: 220px;
     padding-bottom: 5em;
+    padding-left: 3em;
+}
+
+.dataviz {
+    width: 320px; 
+    height: 220px;
+    padding-bottom: 5em;
+    padding-left: 3em;
 }
 
 .clickme1 {
