--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -69,6 +69,10 @@ h4 {
     line-height: 1.5em;
 }
 
+.smaller {
+    padding-bottom: 5em;
+}
+
 h5 {
     font-size: 1.2em;
     text-align: right; 
