--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -169,9 +169,9 @@ footer {
 }
 
 form {
-    font-size: 0.925em;
+    font-size: 1.1em;
     text-align: left;
-    color: #545c6e;
-    line-height: 1em; 
+    color: #757575;
+    line-height: 1.2em; 
     padding: 3em 0em 0em 0em;
 }
