--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -127,6 +127,15 @@ button:hover {
     padding-bottom: 5em;
 }
 
+.data {
+    width: 300px; 
+    height: 300px;
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 5em; 
+}
+
+
 .clickme1 {
     background-color: #B87732;
     color: white;
