--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -55,7 +55,7 @@ h3 {
     color: #545c6e;
     line-height: 1em;
     height: 1em;
-    max-width: 50px;
+    width: 50px;
     padding: 0em 0em 0em 0em;
 }
 
@@ -88,7 +88,7 @@ h6 {
 p {
     font-size: 0.925em;
     font-weight: 300;
-    max-width: 50px;
+    width: 50px;
     color: #757575;
 }
 
