--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -102,7 +102,8 @@ p {
     margin-left: 0em;
     margin-right: 0em;
     width: 17em;
-    padding: 0em 0em 3.2em 0em;
+    height: 17em;
+    padding: 2em 0em 3.2em 0em;
 }
 
 .imgtext {
@@ -110,7 +111,8 @@ p {
     margin-left: 0em;
     margin-right: 0em;
     width: 17em;
-    padding: 0em 0em 3.2em 0em;
+    height: 17em;
+    padding: 2em 0em 3.2em 0em;
 }
 
 a {
@@ -184,8 +186,6 @@ button:hover {
     color: white;
     font-weight: 350;
     font-size: 0.9em;
-    padding-bottom: 4.5em;
-    padding-top: 0.5em;
 }
 
 footer {
