--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -97,21 +97,12 @@ p {
     color: #757575;
 }
 
-.match {
-    line-height: 2em;
-    margin-left: 0em;
-    margin-right: 0em;
-    width: 17em;
-    height: 17em;
-    padding: 2em 0em 3.2em 0em;
-}
-
 .imgtext {
     line-height: 2em;
     margin-left: 0em;
     margin-right: 0em;
     width: 17em;
-    height: 17em;
+    height: 5em;
     padding: 2em 0em 3.2em 0em;
 }
 
@@ -186,6 +177,10 @@ button:hover {
     color: white;
     font-weight: 350;
     font-size: 0.9em;
+    max-width: 17em;
+    max-height: 5em;
+    padding: 2em 0em 3.2em 0em;
+    
 }
 
 footer {
