--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -172,6 +172,13 @@ button:hover {
     height: 3em;
 }
 
+.signup {
+    background-color: #B87732;
+    color: white;
+    font-weight: 350;
+    font-size: 0.9em;
+}
+
 footer {
     background-color: #6B451D;
     color: #d1d1d1;
