--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -88,7 +88,9 @@ h6 {
 h7 { 
     font-size: 1.35em;
     color: #EB973F;
-    line-height: 1em;   
+    line-height: 2em;
+    padding-bottom: 3em;
+    padding-top: 2em;
 }
 
 p {
@@ -104,6 +106,12 @@ p {
     width: 17em;
     height: 10em;
     padding: 0em 0em 3.2em 0em;
+}
+
+.info {
+    line-height: 2em;
+    padding-bottom 3em;
+    padding-top: 2em;
 }
 
 a {
