--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -102,7 +102,6 @@ p {
 .title {
     color: #EB973F;
     line-height: 1.5em;
-    padding-bottom: 3em;
     padding-top: 2em;
     font-weight: 400;
     font-size: 1.2em;
@@ -111,8 +110,15 @@ p {
 .info {
     color: #757575;
     line-height: 1.5em;
-    padding-bottom 3em;
     padding-top: 2em;
+    padding-bottom: 5em;
+}
+
+.info2 {
+    color: #757575;
+    line-height: 1.5em;
+    padding-top: 2em;
+    padding-bottom: 5em;
 }
 
 a {
