--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -87,7 +87,7 @@ h6 {
 
 p {
     font-size: 1em;
-    font-weight: 300; 
+    font-weight: 350; 
 }
 
 .imgtext {
@@ -112,14 +112,17 @@ p {
     color: #757575;
     line-height: 1.5em;
     padding-top: 2em;
-    padding-bottom: 3em;
+    padding-bottom: 1.2em;
 }
 
 .info2 {
-    color: #757575;
+    color: #EB973F;
     line-height: 1.5em;
-    padding-top: 2em;
-    padding-bottom: 3em;
+}
+
+.info2:hover {
+    color: #EB973F;
+    text-decoration: underline;
 }
 
 a {
