--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -211,7 +211,7 @@ form {
     line-height: 1.2em; 
     padding: 3em 0em 1em 0em;
 }
-.donate {
+.clickme4 {
 	border-radius: 10px;
     text-transform: none;
     border-style: none;
