--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -212,6 +212,9 @@ form {
     padding: 3em 0em 1em 0em;
 }
 .clickme4 {
+	background-color: #B87732;
+    color: white;
+    font-weight: 335;
 	border-radius: 10px;
     text-transform: none;
     border-style: none;
