--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -225,7 +225,7 @@ form {
     border-style: none;
     position: left;
 }
-td {
+table {
 	margin-top: 1.5em;
     margin-bottom: 9em;
     margin-left: 30em;
