--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -228,7 +228,9 @@ form {
 td {
 	background-color: #B87732;
     color: white;
-	margin-top: 1.5em;
-    margin-bottom: 9em;
+	margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right; 15px;
     padding: 15px;
 }
