--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -231,7 +231,7 @@ td {
     margin-left: 20px;
     padding: 50px;
 }
-table {
+.table {
 	font-size: 1em;
     font-weight: 325;
     padding: left;
