--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -176,7 +176,8 @@ button:hover {
     color: white;
     font-weight: 350;
     margin-top: 1em;
-    margin-left: 21em;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 1.3em;
     width: 50%;
     height: 3em;
@@ -188,7 +189,8 @@ button:hover {
     font-weight: 335;
     margin-top: 1.5em;
     margin-bottom: 9em;
-    margin-left: 30em;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 1.1em;
     width: 40%;
     height: 3em;
