--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -178,6 +178,7 @@ button:hover {
     margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
     font-size: 1.3em;
     width: 50%;
     height: 3em;
@@ -191,6 +192,7 @@ button:hover {
     margin-bottom: 9em;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
     font-size: 1.1em;
     width: 40%;
     height: 3em;
