--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -176,7 +176,7 @@ button:hover {
     color: white;
     font-weight: 350;
     margin-top: 1em;
-    margin: 50%;
+    margin-left: 21em;
     font-size: 1.3em;
     width: 50%;
     height: 3em;
@@ -188,7 +188,7 @@ button:hover {
     font-weight: 335;
     margin-top: 1.5em;
     margin-bottom: 9em;
-    margin: 50%;
+    margin-left: 30em;
     font-size: 1.1em;
     width: 40%;
     height: 3em;
