--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -203,6 +203,7 @@ table {
     padding-left: 3em;
     margin-left: auto;
     margin-right: auto;
+    border: none;
 }
 
 footer {
@@ -245,5 +246,6 @@ td {
     font-weight: 325;
     padding-left: 3em;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
+    border: none;
 }
