--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -203,7 +203,24 @@ table {
     padding-left: 3em;
     margin-left: auto;
     margin-right: auto;
-    border: none;
+    width: 80%;
+}
+
+.table {
+	font-size: 1em;
+	color: #545c6e;
+    font-weight: 325;
+    padding-left: 3em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%
+}
+
+td {
+	margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    padding: 50px;
 }
 
 footer {
